--- a/hello.html
+++ b/hello.html
@@ -6,6 +6,8 @@
 	<title>Hello</title>
 </head>
 <body>
+	<h1>Welcome Home</h1>
+	<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In, minus?</p>
 	Hello, World!
 </body>
 </html>
