--- a/hello.html
+++ b/hello.html
@@ -6,7 +6,7 @@
 	<title>Hello</title>
 </head>
 <body>
-	<h1>Welcome Home</h1>
+	<h1 style="color:blue;">Welcome Home</h1>
 	<h2>Edited on Github</h2>
 	<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In, minus?</p>
 	Hello, World!
